--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -3,16 +3,18 @@ body {
   display: grid;
   align-items: center;
   height: 100vh;
-  background-color: #2f4200;
+  background-image: radial-gradient(ellipse, #385300, #212900);
 }
 
 h2 {
   font-size: 2rem;
   width: 10ch;
+  text-transform: uppercase;
   margin-inline: auto;
   color: #446109;
 }
 
 p {
   font-size: 8rem;
+  /* font-weight: 500; */
 }
