Add state altering via press space key, locked state for application and mixin for transition property

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,9 +3,7 @@
 .btn {
   cursor: pointer;
   font-size: 2.5rem;
-  transition-property: opacity;
-  transition-duration: 0.3s;
-  transition-timing-function: ease;
+  @include transition(opacity, .3s, ease);
 
   &-clear {
     border: none;
